[project]
name = "ahc050rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imageio>=2.37.0",
    "matplotlib>=3.10.3",
    "mypy>=1.16.1",
    "numpy>=2.3.1",
    "pydantic>=2.11.7",
    "ruff>=0.12.3",
    "torch>=2.7.1",
]
